@@ -1,6 +1,5 @@
 package redis.clients.jedis.commands.jedis;
 
-import static org.hamcrest.CoreMatchers.equalTo;
 import static org.junit.Assert.*;
 
 import java.util.ArrayList;
@@ -9,12 +8,15 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.Matcher;
+import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
 import redis.clients.jedis.Jedis;
+import redis.clients.jedis.RedisProtocol;
 import redis.clients.jedis.args.FlushMode;
 import redis.clients.jedis.args.FunctionRestorePolicy;
 import redis.clients.jedis.exceptions.JedisConnectionException;
@@ -23,9 +25,15 @@ import redis.clients.jedis.exceptions.JedisNoScriptException;
 import redis.clients.jedis.resps.FunctionStats;
 import redis.clients.jedis.resps.LibraryInfo;
 import redis.clients.jedis.util.ClientKillerUtil;
+import redis.clients.jedis.util.KeyValue;
 import redis.clients.jedis.util.SafeEncoder;
 
+@RunWith(Parameterized.class)
 public class ScriptingCommandsTest extends JedisCommandsTestBase {
+
+  public ScriptingCommandsTest(RedisProtocol redisProtocol) {
+    super(redisProtocol);
+  }
 
   @Before
   @Override
@@ -111,7 +119,7 @@ public class ScriptingCommandsTest extends JedisCommandsTestBase {
 
     Long response = (Long) jedis.eval(script, keys, new ArrayList<String>());
 
-    assertEquals(new Long(2), response);
+    assertEquals(Long.valueOf(2), response);
   }
 
   @Test
@@ -119,8 +127,8 @@ public class ScriptingCommandsTest extends JedisCommandsTestBase {
     String script = "return { {KEYS[1]} , {2} }";
     List<?> results = (List<?>) jedis.eval(script, 1, "key1");
 
-    assertThat((List<String>) results.get(0), listWithItem("key1"));
-    assertThat((List<Long>) results.get(1), listWithItem(2L));
+    MatcherAssert.assertThat((List<String>) results.get(0), Matchers.hasItem("key1"));
+    MatcherAssert.assertThat((List<Long>) results.get(1), Matchers.hasItem(2L));
   }
 
   @Test
@@ -321,6 +329,12 @@ public class ScriptingCommandsTest extends JedisCommandsTestBase {
   }
 
   @Test
+  public void emptyLuaTableReply() {
+    Object reply = jedis.eval("return {}");
+    assertEquals(Collections.emptyList(), reply);
+  }
+
+  @Test
   public void functionLoadAndDelete() {
     String engine = "Lua";
     String library = "mylib";
@@ -388,19 +402,37 @@ public class ScriptingCommandsTest extends JedisCommandsTestBase {
     assertEquals(functionCode, response.getLibraryCode());
 
     // Binary
-    List<Object> bresponse = (List<Object>) jedis.functionListBinary().get(0);
-    assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
+    if (protocol != RedisProtocol.RESP3) {
 
-    bresponse = (List<Object>) jedis.functionListWithCodeBinary().get(0);
-    assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
-    assertNotNull(bresponse.get(7));
+      List<Object> bresponse = (List<Object>) jedis.functionListBinary().get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
 
-    bresponse = (List<Object>) jedis.functionList(library.getBytes()).get(0);
-    assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
+      bresponse = (List<Object>) jedis.functionListWithCodeBinary().get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
+      assertNotNull(bresponse.get(7));
 
-    bresponse = (List<Object>) jedis.functionListWithCode(library.getBytes()).get(0);
-    assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
-    assertNotNull(bresponse.get(7));
+      bresponse = (List<Object>) jedis.functionList(library.getBytes()).get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
+
+      bresponse = (List<Object>) jedis.functionListWithCode(library.getBytes()).get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(1));
+      assertNotNull(bresponse.get(7));
+    } else {
+
+      List<KeyValue> bresponse = (List<KeyValue>) jedis.functionListBinary().get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(0).getValue());
+
+      bresponse = (List<KeyValue>) jedis.functionListWithCodeBinary().get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(0).getValue());
+      assertNotNull(bresponse.get(3));
+
+      bresponse = (List<KeyValue>) jedis.functionList(library.getBytes()).get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(0).getValue());
+
+      bresponse = (List<KeyValue>) jedis.functionListWithCode(library.getBytes()).get(0);
+      assertArrayEquals(library.getBytes(), (byte[]) bresponse.get(0).getValue());
+      assertNotNull(bresponse.get(3));
+    }
   }
 
   @Test
@@ -505,9 +537,5 @@ public class ScriptingCommandsTest extends JedisCommandsTestBase {
 
     // Binary
     assertEquals(Long.valueOf(1), jedis.fcallReadonly("noop".getBytes(), Collections.emptyList(), Collections.emptyList()));
-  }
-
-  private <T> Matcher<Iterable<? super T>> listWithItem(T expected) {
-    return CoreMatchers.<T> hasItem(equalTo(expected));
   }
 }
